<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:id="@+id/detailFragment"
    tools:context=".Fragment1">

    <TextView
        android:id="@+id/newtask"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:fontFamily="sans-serif"
        android:text="@string/newtask"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/thisis40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />


    <TextView
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/thisis24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/thisis24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:background="@drawable/text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ok"
        android:layout_width="153dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/continion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="MissingConstraints" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="224dp"
        android:layout_height="301dp"
        android:background="@drawable/recycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>