<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:id="@+id/detailFragment"
    tools:context=".Fragment3">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_return"
        android:layout_width="154dp"
        android:layout_height="26dp"
        android:background="@drawable/button"
        android:text="@string/returnb"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="330dp"
        android:layout_height="178dp"
        android:background="@drawable/recycle"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        tools:ignore="MissingConstraints" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="208dp"
        android:layout_height="303dp"
        android:background="@drawable/recycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/task2"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:background="@drawable/text"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/yet2"
        android:layout_width="330dp"
        android:layout_height="59dp"
        android:background="@drawable/text"
        android:gravity="top|start"
        android:hint="Заметки"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editBut"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:background="@drawable/button"
        android:text="@string/red"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>